<resources>
    <string name="app_name">Jeniture</string>
    <string name="nama">Nama <font color="red">*</font></string>
    <string name="jepara_integrated_furniture">Jepara Integrated Furniture</string>
    <string name="email">Email <font color="red">*</font></string>
    <string name="password">Password <font color="red">*</font></string>
    <string name="konf">Konfirmasi Password <font color="red">*</font></string>
    <string name="token">Token Email <font color="red">*</font></string>
    <string name="xxxxxxxx">xxxxxxxx</string>
    <string name="xxxx">xxxx</string>
    <string name="email_jeniture">jeniture@gmail.com</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="daftar_keraliyu">Daftar Keraliyu</string>
    <string name="kritik">Kritik</string>
    <string name="saran">Saran</string>
    <string name="daftar_kayu">Daftar Kayu</string>
    <string name="nama_perusahaan">Nama Perusahaan <font color="red">*</font></string>
    <string name="alamat">Alamat <font color="red">*</font></string>
    <string name="no_hp">No. HP <font color="red">*</font></string>
    <string name="sukodono">Sukodono RT 2 RW 1 Jepara</string>
    <string name="no_08">081234567890</string>
    <string name="daftar_furniture">Daftar Furniture</string>
    <string name="tambah_tukang">Tambah Tukang</string>
    <string name="username">Username <font color="red">*</font></string>
    <string name="tulis_kritik_disini">Tulis kritik disini</string>
    <string name="tulis_saran_disini">Tulis saran disini</string>
    <string name="daftar_tukang">Daftar Tukang</string>
</resources>