<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DaftarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="160dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="text"
                    android:hint="@string/jepara_integrated_furniture"
                    android:background="@drawable/layout_bg_edit_text"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="text"
                    android:hint="@string/email_jeniture"
                    android:background="@drawable/layout_bg_edit_text"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="textPassword"
                    android:hint="@string/xxxxxxxx"
                    android:background="@drawable/layout_bg_edit_text"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/konf"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="textPassword"
                    android:hint="@string/xxxxxxxx"
                    android:background="@drawable/layout_bg_edit_text"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/token"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="text"
                    android:hint="@string/xxxx"
                    android:background="@drawable/layout_bg_edit_text"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <ImageButton
                    android:id="@+id/btn_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_daftar"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="30dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/jeniture"
                    android:adjustViewBounds="true"
                    android:scaleType="fitEnd"
                    android:layout_margin="20dp"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header_daftar"
        android:adjustViewBounds="true"/>
</RelativeLayout>