<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/header_login"
            android:adjustViewBounds="true"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="text"
                    android:hint="@string/email_jeniture"
                    android:background="@drawable/layout_bg_edit_text_login"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="24dp"
                    android:inputType="textPassword"
                    android:hint="@string/xxxxxxxx"
                    android:background="@drawable/layout_bg_edit_text_login"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <ImageButton
                    android:id="@+id/btn_sumbit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_submit"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/link_belum_punya_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/belum_punya_akun"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="120dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/lupa_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="100dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/jeniture"
        android:scaleType="fitEnd"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:elevation="6dp"/>
</FrameLayout>