<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_gravity="" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LaporanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/header_laporan"
            android:adjustViewBounds="true"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kritik"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:inputType="textMultiLine"
                    android:background="@drawable/layout_bg_edit_text_login"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:hint="@string/tulis_kritik_disini"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saran"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:inputType="textMultiLine"
                    android:background="@drawable/layout_bg_edit_text_login"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:hint="@string/tulis_saran_disini"
                    />
                <ImageButton
                    android:id="@+id/btn_sumbit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_kirim"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="200dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="start|bottom"
        android:src="@drawable/bottom_laporan"
        android:scaleType="fitStart"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:elevation="6dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/jeniture"
        android:scaleType="fitEnd"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:elevation="6dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>